--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -110,7 +110,7 @@
       </div>
       <div class="inner">
         <h1 class="blog-title">{{ site.title }}</h1>
-        <h2 class="blog-description">{{ site.description }}</h2>
+        <h2 class="blog-description">Ever tried. Ever failed. Try again. Fail again. Fail better</h2>
         <a href={{ "/" | prepend: site.baseurl }} class="btn">Back to Overview</a>
       </div>
     </div>
