--- a/css/main.sass
+++ b/css/main.sass
@@ -130,7 +130,7 @@ body
 
 .content
   width: 100%
-  max-width: 950px #640
+  max-width: 950px
   margin: 0 auto
   @include box-sizing(border-box)
   @include respond-to(800)
