--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
 
     {% include footer.html %}
     {% include javascripts.html %}
-
+    {% include google_analytics.html %}
+    
   </body>
 
 </html>
